Rewrite addToGroup to handle more cases, especially grouping image b on a where a is currently grouped on b

BUG: 278927